# WebAppExample

./: .gitignore  config.py  pyproject.toml  requirements.txt  telegram_bot.py
app/: main.py
app/api/: __init__.py
app/api/ads/: models.py  router.py  schemas.py
app/api/categories/: models.py  router.py  schemas.py
app/api/chapters/: models.py  router.py  schemas.py
app/api/duas/: models.py  router.py  schemas.py
app/api/favorites/: models.py  router.py  schemas.py
app/api/users/: models.py  router.py  schemas.py
app/db/: __init__.py  database.py  repository.py  users.py
app/static/css/: style.css
app/static/js/: dua.js  main.js
app/templates/: dua.html  index.html
bot/: __init__.py  api.py  change_ad.py  register_check.py  sender.py  start.py
bot/keyboards/: __init__.py  kb_admin.py  kb_cancel.py  kb_webapp.py
